--- a/.github/workflows/learning-github-actions.yml
+++ b/.github/workflows/learning-github-actions.yml
@@ -1,1 +1,11 @@
-Hello World
+name: learning-github-actions
+on:
+  - push
+jobs:
+  check-bats-version: null
+  run-on: ubuntu-latest
+  steps:
+    - uses:actions/checkout@v2
+    - uses:actions/setup-node@v1
+    - run:npm install -g bats
+    - run:bats -v
