--- a/.github/workflows/learning-github-actions.yml
+++ b/.github/workflows/learning-github-actions.yml
@@ -3,7 +3,7 @@ on:
   - push
 jobs:
   check-bats-version: null
-  run-on: ubuntu-latest
+  runs-on: ubuntu-latest
   steps:
     - uses:actions/checkout@v2
     - uses:actions/setup-node@v1
