--- a/.github/workflows/learning-github-actions.yml
+++ b/.github/workflows/learning-github-actions.yml
@@ -2,7 +2,7 @@ name: learning-github-actions
 on:
   - push
 jobs:
-  check-bats-version: null
+  check-bats-version:
   runs-on: ubuntu-latest
   steps:
     - uses:actions/checkout@v2
